# CategoryTheoryViaRust

category_theory_via_rust/: Cargo.toml
category_theory_via_rust/src/: functor_test.rs  test_categories.rs  test_category_functors.rs  test_functor_composition.rs
